--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <li class=layer data-depth=0.0>
                 <div class=main_content> <span class=home-sub-text>We Are Coming Soon | MOMO & KEBAB FAMILY</span>
-                    <h2 class=home-big-text>Website <span>Under Construction</span> Now</h2>
+                    <h2 class=home-big-text>CAll 510-975-0292<span> Order Now</span> </h2>
                     <p class="home-info-text light-gray-text">Unleash the flavors of Nepal with our unrivaled, best-in-town Nepali cuisine</p> 
                         <!-- <a href=#subscribe class="btn btn-transparent">subscribe</a> -->
                 </div>
@@ -60,6 +60,29 @@
                 <div class="icon-arrow-hint fa fa-angle-down arrow-1"></div>
                 <div class="icon-arrow-hint fa fa-angle-down arrow-2"></div>
             </a></div>
+    </section>
+    <div class=divider-line></div>
+    <section id=countdown class="section light-gray-bg">
+        <div class=container>
+            <div class=row data-aos=fade-up>
+                <div class="col-md-12 col-sm-12">
+                    <div class="title-container text-center">
+                        <h2 class=section-title>We are Serving Meet US</h2>
+                        <h3 class=section-sub-title>Call <b>510-975-0292</b> for Order</h3>
+                        <p class="section-sub-title ex-light-gray-text">Saturday: River Island Farmers Market</p>
+                        <p class="section-sub-title ex-light-gray-text">8AM - 12PM</p>
+                        <div class=divider-line></div>
+                        <p class="section-sub-title ex-light-gray-text">Sunday: Mountain House Farmers Market</p>
+                        <p class="section-sub-title ex-light-gray-text">9AM - 1PM</p>
+                        <div class=divider-line></div>
+                        <p class="section-sub-title ex-light-gray-text">Wednesday to Sunday: In front of Central Park Mountain House </p>
+                        <p class="section-sub-title ex-light-gray-text">5:30PM - 9:30PM</p>
+                        <div class=divider-line></div>
+                        <p class="section-sub-title ex-light-gray-text">Monday & Tuesday: Closed </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <div class=divider-line></div>
     <section id=countdown class="section light-gray-bg">
